# 8bytestockAutomation

./: .env.sample  01_create_table.sql  Dockerfile  README.md  dagster.yaml  db.py  docker-compose.yml  jobs.py  pyproject.toml  repository.py  workspace.yaml
